modified index.html read.me all css files

--- a/index.html
+++ b/index.html
@@ -7,20 +7,33 @@
   <link rel="stylesheet" href="CSS/layout.css">
 </head>
 <body>
-  <main>
-    <p id="a">a</p>
-    <p id="b">b</p>
-    <div id="cD">
-      <p id="c">c</p>
-      <p id="d">d</p>
+    <div id="header">
+        <p id="a">a</p>
     </div>
-    <div id="eFGH">
-     <p id="e">e</p>
-      <p id="f">f</p>
-      <p id="g">g</p>
-      <p id="h">h</p>
-    </div>  
-    <p id="j">i</p>
+
+  <main>
+    <div id="nav">
+        <p id="b">b</p>
+    </div>
+
+    <div id="content">
+        <div id="bigContent">
+            <p id="c">c</p>
+            <p id="d">d</p>
+        </div>
+    
+        <div id="smallContent">
+            <P id="e">e</P>
+            <P id="f">f</P>
+            <P id="g">g</P>
+            <P id="h">h</P>
+        </div>  
+    </div>
+
+    <div id="footer">
+        <p id="j">j</p>
+    </div>
   </main>
+  
 </body>
 </html>
