modified source code for css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <title>SMACSS Down</title>
-  <link rel="stylesheet" href="CSS/reset.css">
-  <link rel="stylesheet" href="CSS/base.css">
-  <link rel="stylesheet" href="CSS/layout.css">
+  <link rel="stylesheet" href="css//reset.css">
+  <link rel="stylesheet" href="css//base.css">
+  <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
     <div id="header">
